parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement
Rule 2     programme -> statement programme
Rule 3     statement -> assignation
Rule 4     statement -> declaration
Rule 5     statement -> expression
Rule 6     statement -> structure
Rule 7     statement -> comment
Rule 8     statement -> BREAK
Rule 9     statement -> BREAK new_line
Rule 10    comment -> statement SL_COMMENT new_line
Rule 11    comment -> statement ML_COMMENT new_line
Rule 12    comment -> SL_COMMENT new_line
Rule 13    comment -> ML_COMMENT new_line
Rule 14    expression -> expression_num
Rule 15    expression -> expression_bool
Rule 16    expression_num -> ADD_OP expression_num AN expression_num
Rule 17    expression_num -> MUL_OP expression_num AN expression_num
Rule 18    expression_num -> MOD_OP expression_num AN expression_num
Rule 19    expression_num -> MAX_OP expression_num AN expression_num
Rule 20    expression_num -> MIN_OP expression_num AN expression_num
Rule 21    expression_num -> ADD_OP expression_num AN expression_num new_line
Rule 22    expression_num -> MUL_OP expression_num AN expression_num new_line
Rule 23    expression_num -> MOD_OP expression_num AN expression_num new_line
Rule 24    expression_num -> MAX_OP expression_num AN expression_num new_line
Rule 25    expression_num -> MIN_OP expression_num AN expression_num new_line
Rule 26    expression_num -> INC_OP expression_num
Rule 27    expression_num -> INC_OP expression_num new_line
Rule 28    expression_num -> NUMBER
Rule 29    expression_num -> IDENTIFIER
Rule 30    expression_num -> NUMBER new_line
Rule 31    expression_num -> IDENTIFIER new_line
Rule 32    expression_bool -> BOOL
Rule 33    expression_bool -> BOOL new_line
Rule 34    expression_bool -> BOOL_OP expression_bool AN expression_bool
Rule 35    expression_bool -> BOOL_OP expression_bool AN expression_bool new_line
Rule 36    expression_bool -> NOT expression_bool
Rule 37    expression_bool -> NOT expression_bool new_line
Rule 38    expression_bool -> COMP expression_num AN expression_num
Rule 39    expression_bool -> COMP expression_num AN expression_num new_line
Rule 40    declaration -> DECLARATION IDENTIFIER ASSIGNEMENT_DECL expression
Rule 41    declaration -> DECLARATION IDENTIFIER ASSIGNEMENT_DECL expression new_line
Rule 42    assignation -> IDENTIFIER ASSIGNEMENT_SIMPLE expression
Rule 43    assignation -> IDENTIFIER ASSIGNEMENT_SIMPLE expression new_line
Rule 44    new_line -> NL
Rule 45    new_line -> NL NL
Rule 46    structure -> WHILE expression_bool programme END_LOOP
Rule 47    structure -> WHILE expression_bool programme END_LOOP new_line
Rule 48    structure -> FOR IDENTIFIER UNTIL expression_num programme END_LOOP
Rule 49    structure -> FOR IDENTIFIER UNTIL expression_num programme END_LOOP new_line
Rule 50    structure -> expression_bool IF new_line IF_TRUE new_line programme IF_END
Rule 51    structure -> expression_bool IF new_line IF_TRUE new_line programme IF_END new_line
Rule 52    structure -> expression_bool IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END
Rule 53    structure -> expression_bool IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END new_line

Terminals, with rules where they appear

ADD_OP               : 16 21
AN                   : 16 17 18 19 20 21 22 23 24 25 34 35 38 39
ASSIGNEMENT_DECL     : 40 41
ASSIGNEMENT_SIMPLE   : 42 43
BOOL                 : 32 33
BOOL_OP              : 34 35
BREAK                : 8 9
COMP                 : 38 39
DECLARATION          : 40 41
END_LOOP             : 46 47 48 49
FOR                  : 48 49
IDENTIFIER           : 29 31 40 41 42 43 48 49
IF                   : 50 51 52 53
IF_END               : 50 51 52 53
IF_FALSE             : 52 53
IF_TRUE              : 50 51 52 53
INC_OP               : 26 27
MAX_OP               : 19 24
MIN_OP               : 20 25
ML_COMMENT           : 11 13
MOD_OP               : 18 23
MUL_OP               : 17 22
NL                   : 44 45 45
NOT                  : 36 37
NUMBER               : 28 30
SL_COMMENT           : 10 12
UNTIL                : 48 49
WHILE                : 46 47
error                : 

Nonterminals, with rules where they appear

assignation          : 3
comment              : 7
declaration          : 4
expression           : 5 40 41 42 43
expression_bool      : 15 34 34 35 35 36 37 46 47 50 51 52 53
expression_num       : 14 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 38 38 39 39 48 49
new_line             : 9 10 11 12 13 21 22 23 24 25 27 30 31 33 35 37 39 41 43 47 49 50 50 51 51 51 52 52 52 53 53 53 53
programme            : 2 46 47 48 49 50 51 52 52 53 53 0
statement            : 1 2 10 11
structure            : 6

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . assignation
    (4) statement -> . declaration
    (5) statement -> . expression
    (6) statement -> . structure
    (7) statement -> . comment
    (8) statement -> . BREAK
    (9) statement -> . BREAK new_line
    (42) assignation -> . IDENTIFIER ASSIGNEMENT_SIMPLE expression
    (43) assignation -> . IDENTIFIER ASSIGNEMENT_SIMPLE expression new_line
    (40) declaration -> . DECLARATION IDENTIFIER ASSIGNEMENT_DECL expression
    (41) declaration -> . DECLARATION IDENTIFIER ASSIGNEMENT_DECL expression new_line
    (14) expression -> . expression_num
    (15) expression -> . expression_bool
    (46) structure -> . WHILE expression_bool programme END_LOOP
    (47) structure -> . WHILE expression_bool programme END_LOOP new_line
    (48) structure -> . FOR IDENTIFIER UNTIL expression_num programme END_LOOP
    (49) structure -> . FOR IDENTIFIER UNTIL expression_num programme END_LOOP new_line
    (50) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_END
    (51) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_END new_line
    (52) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END
    (53) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END new_line
    (10) comment -> . statement SL_COMMENT new_line
    (11) comment -> . statement ML_COMMENT new_line
    (12) comment -> . SL_COMMENT new_line
    (13) comment -> . ML_COMMENT new_line
    (16) expression_num -> . ADD_OP expression_num AN expression_num
    (17) expression_num -> . MUL_OP expression_num AN expression_num
    (18) expression_num -> . MOD_OP expression_num AN expression_num
    (19) expression_num -> . MAX_OP expression_num AN expression_num
    (20) expression_num -> . MIN_OP expression_num AN expression_num
    (21) expression_num -> . ADD_OP expression_num AN expression_num new_line
    (22) expression_num -> . MUL_OP expression_num AN expression_num new_line
    (23) expression_num -> . MOD_OP expression_num AN expression_num new_line
    (24) expression_num -> . MAX_OP expression_num AN expression_num new_line
    (25) expression_num -> . MIN_OP expression_num AN expression_num new_line
    (26) expression_num -> . INC_OP expression_num
    (27) expression_num -> . INC_OP expression_num new_line
    (28) expression_num -> . NUMBER
    (29) expression_num -> . IDENTIFIER
    (30) expression_num -> . NUMBER new_line
    (31) expression_num -> . IDENTIFIER new_line
    (32) expression_bool -> . BOOL
    (33) expression_bool -> . BOOL new_line
    (34) expression_bool -> . BOOL_OP expression_bool AN expression_bool
    (35) expression_bool -> . BOOL_OP expression_bool AN expression_bool new_line
    (36) expression_bool -> . NOT expression_bool
    (37) expression_bool -> . NOT expression_bool new_line
    (38) expression_bool -> . COMP expression_num AN expression_num
    (39) expression_bool -> . COMP expression_num AN expression_num new_line

    BREAK           shift and go to state 22
    IDENTIFIER      shift and go to state 13
    DECLARATION     shift and go to state 23
    WHILE           shift and go to state 5
    FOR             shift and go to state 15
    SL_COMMENT      shift and go to state 21
    ML_COMMENT      shift and go to state 6
    ADD_OP          shift and go to state 11
    MUL_OP          shift and go to state 18
    MOD_OP          shift and go to state 20
    MAX_OP          shift and go to state 16
    MIN_OP          shift and go to state 9
    INC_OP          shift and go to state 4
    NUMBER          shift and go to state 3
    BOOL            shift and go to state 12
    BOOL_OP         shift and go to state 8
    NOT             shift and go to state 24
    COMP            shift and go to state 26

    comment                        shift and go to state 1
    assignation                    shift and go to state 19
    expression_bool                shift and go to state 14
    statement                      shift and go to state 10
    declaration                    shift and go to state 2
    expression_num                 shift and go to state 7
    expression                     shift and go to state 25
    structure                      shift and go to state 17
    programme                      shift and go to state 27

state 1

    (7) statement -> comment .

    SL_COMMENT      reduce using rule 7 (statement -> comment .)
    ML_COMMENT      reduce using rule 7 (statement -> comment .)
    BREAK           reduce using rule 7 (statement -> comment .)
    IDENTIFIER      reduce using rule 7 (statement -> comment .)
    DECLARATION     reduce using rule 7 (statement -> comment .)
    WHILE           reduce using rule 7 (statement -> comment .)
    FOR             reduce using rule 7 (statement -> comment .)
    ADD_OP          reduce using rule 7 (statement -> comment .)
    MUL_OP          reduce using rule 7 (statement -> comment .)
    MOD_OP          reduce using rule 7 (statement -> comment .)
    MAX_OP          reduce using rule 7 (statement -> comment .)
    MIN_OP          reduce using rule 7 (statement -> comment .)
    INC_OP          reduce using rule 7 (statement -> comment .)
    NUMBER          reduce using rule 7 (statement -> comment .)
    BOOL            reduce using rule 7 (statement -> comment .)
    BOOL_OP         reduce using rule 7 (statement -> comment .)
    NOT             reduce using rule 7 (statement -> comment .)
    COMP            reduce using rule 7 (statement -> comment .)
    $end            reduce using rule 7 (statement -> comment .)
    END_LOOP        reduce using rule 7 (statement -> comment .)
    IF_END          reduce using rule 7 (statement -> comment .)
    IF_FALSE        reduce using rule 7 (statement -> comment .)


state 2

    (4) statement -> declaration .

    SL_COMMENT      reduce using rule 4 (statement -> declaration .)
    ML_COMMENT      reduce using rule 4 (statement -> declaration .)
    BREAK           reduce using rule 4 (statement -> declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> declaration .)
    DECLARATION     reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    ADD_OP          reduce using rule 4 (statement -> declaration .)
    MUL_OP          reduce using rule 4 (statement -> declaration .)
    MOD_OP          reduce using rule 4 (statement -> declaration .)
    MAX_OP          reduce using rule 4 (statement -> declaration .)
    MIN_OP          reduce using rule 4 (statement -> declaration .)
    INC_OP          reduce using rule 4 (statement -> declaration .)
    NUMBER          reduce using rule 4 (statement -> declaration .)
    BOOL            reduce using rule 4 (statement -> declaration .)
    BOOL_OP         reduce using rule 4 (statement -> declaration .)
    NOT             reduce using rule 4 (statement -> declaration .)
    COMP            reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    END_LOOP        reduce using rule 4 (statement -> declaration .)
    IF_END          reduce using rule 4 (statement -> declaration .)
    IF_FALSE        reduce using rule 4 (statement -> declaration .)


state 3

    (28) expression_num -> NUMBER .
    (30) expression_num -> NUMBER . new_line
    (44) new_line -> . NL
    (45) new_line -> . NL NL

  ! shift/reduce conflict for NL resolved as shift
    BREAK           reduce using rule 28 (expression_num -> NUMBER .)
    IDENTIFIER      reduce using rule 28 (expression_num -> NUMBER .)
    DECLARATION     reduce using rule 28 (expression_num -> NUMBER .)
    WHILE           reduce using rule 28 (expression_num -> NUMBER .)
    FOR             reduce using rule 28 (expression_num -> NUMBER .)
    SL_COMMENT      reduce using rule 28 (expression_num -> NUMBER .)
    ML_COMMENT      reduce using rule 28 (expression_num -> NUMBER .)
    ADD_OP          reduce using rule 28 (expression_num -> NUMBER .)
    MUL_OP          reduce using rule 28 (expression_num -> NUMBER .)
    MOD_OP          reduce using rule 28 (expression_num -> NUMBER .)
    MAX_OP          reduce using rule 28 (expression_num -> NUMBER .)
    MIN_OP          reduce using rule 28 (expression_num -> NUMBER .)
    INC_OP          reduce using rule 28 (expression_num -> NUMBER .)
    NUMBER          reduce using rule 28 (expression_num -> NUMBER .)
    BOOL            reduce using rule 28 (expression_num -> NUMBER .)
    BOOL_OP         reduce using rule 28 (expression_num -> NUMBER .)
    NOT             reduce using rule 28 (expression_num -> NUMBER .)
    COMP            reduce using rule 28 (expression_num -> NUMBER .)
    IF_END          reduce using rule 28 (expression_num -> NUMBER .)
    AN              reduce using rule 28 (expression_num -> NUMBER .)
    $end            reduce using rule 28 (expression_num -> NUMBER .)
    END_LOOP        reduce using rule 28 (expression_num -> NUMBER .)
    IF_FALSE        reduce using rule 28 (expression_num -> NUMBER .)
    IF              reduce using rule 28 (expression_num -> NUMBER .)
    NL              shift and go to state 29

  ! NL              [ reduce using rule 28 (expression_num -> NUMBER .) ]

    new_line                       shift and go to state 28

state 4

    (26) expression_num -> INC_OP . expression_num
    (27) expression_num -> INC_OP . expression_num new_line
    (16) expression_num -> . ADD_OP expression_num AN expression_num
    (17) expression_num -> . MUL_OP expression_num AN expression_num
    (18) expression_num -> . MOD_OP expression_num AN expression_num
    (19) expression_num -> . MAX_OP expression_num AN expression_num
    (20) expression_num -> . MIN_OP expression_num AN expression_num
    (21) expression_num -> . ADD_OP expression_num AN expression_num new_line
    (22) expression_num -> . MUL_OP expression_num AN expression_num new_line
    (23) expression_num -> . MOD_OP expression_num AN expression_num new_line
    (24) expression_num -> . MAX_OP expression_num AN expression_num new_line
    (25) expression_num -> . MIN_OP expression_num AN expression_num new_line
    (26) expression_num -> . INC_OP expression_num
    (27) expression_num -> . INC_OP expression_num new_line
    (28) expression_num -> . NUMBER
    (29) expression_num -> . IDENTIFIER
    (30) expression_num -> . NUMBER new_line
    (31) expression_num -> . IDENTIFIER new_line

    ADD_OP          shift and go to state 11
    MUL_OP          shift and go to state 18
    MOD_OP          shift and go to state 20
    MAX_OP          shift and go to state 16
    MIN_OP          shift and go to state 9
    INC_OP          shift and go to state 4
    NUMBER          shift and go to state 3
    IDENTIFIER      shift and go to state 30

    expression_num                 shift and go to state 31

state 5

    (46) structure -> WHILE . expression_bool programme END_LOOP
    (47) structure -> WHILE . expression_bool programme END_LOOP new_line
    (32) expression_bool -> . BOOL
    (33) expression_bool -> . BOOL new_line
    (34) expression_bool -> . BOOL_OP expression_bool AN expression_bool
    (35) expression_bool -> . BOOL_OP expression_bool AN expression_bool new_line
    (36) expression_bool -> . NOT expression_bool
    (37) expression_bool -> . NOT expression_bool new_line
    (38) expression_bool -> . COMP expression_num AN expression_num
    (39) expression_bool -> . COMP expression_num AN expression_num new_line

    BOOL            shift and go to state 12
    BOOL_OP         shift and go to state 8
    NOT             shift and go to state 24
    COMP            shift and go to state 26

    expression_bool                shift and go to state 32

state 6

    (13) comment -> ML_COMMENT . new_line
    (44) new_line -> . NL
    (45) new_line -> . NL NL

    NL              shift and go to state 29

    new_line                       shift and go to state 33

state 7

    (14) expression -> expression_num .

    NL              reduce using rule 14 (expression -> expression_num .)
    SL_COMMENT      reduce using rule 14 (expression -> expression_num .)
    ML_COMMENT      reduce using rule 14 (expression -> expression_num .)
    BREAK           reduce using rule 14 (expression -> expression_num .)
    IDENTIFIER      reduce using rule 14 (expression -> expression_num .)
    DECLARATION     reduce using rule 14 (expression -> expression_num .)
    WHILE           reduce using rule 14 (expression -> expression_num .)
    FOR             reduce using rule 14 (expression -> expression_num .)
    ADD_OP          reduce using rule 14 (expression -> expression_num .)
    MUL_OP          reduce using rule 14 (expression -> expression_num .)
    MOD_OP          reduce using rule 14 (expression -> expression_num .)
    MAX_OP          reduce using rule 14 (expression -> expression_num .)
    MIN_OP          reduce using rule 14 (expression -> expression_num .)
    INC_OP          reduce using rule 14 (expression -> expression_num .)
    NUMBER          reduce using rule 14 (expression -> expression_num .)
    BOOL            reduce using rule 14 (expression -> expression_num .)
    BOOL_OP         reduce using rule 14 (expression -> expression_num .)
    NOT             reduce using rule 14 (expression -> expression_num .)
    COMP            reduce using rule 14 (expression -> expression_num .)
    $end            reduce using rule 14 (expression -> expression_num .)
    END_LOOP        reduce using rule 14 (expression -> expression_num .)
    IF_END          reduce using rule 14 (expression -> expression_num .)
    IF_FALSE        reduce using rule 14 (expression -> expression_num .)


state 8

    (34) expression_bool -> BOOL_OP . expression_bool AN expression_bool
    (35) expression_bool -> BOOL_OP . expression_bool AN expression_bool new_line
    (32) expression_bool -> . BOOL
    (33) expression_bool -> . BOOL new_line
    (34) expression_bool -> . BOOL_OP expression_bool AN expression_bool
    (35) expression_bool -> . BOOL_OP expression_bool AN expression_bool new_line
    (36) expression_bool -> . NOT expression_bool
    (37) expression_bool -> . NOT expression_bool new_line
    (38) expression_bool -> . COMP expression_num AN expression_num
    (39) expression_bool -> . COMP expression_num AN expression_num new_line

    BOOL            shift and go to state 12
    BOOL_OP         shift and go to state 8
    NOT             shift and go to state 24
    COMP            shift and go to state 26

    expression_bool                shift and go to state 34

state 9

    (20) expression_num -> MIN_OP . expression_num AN expression_num
    (25) expression_num -> MIN_OP . expression_num AN expression_num new_line
    (16) expression_num -> . ADD_OP expression_num AN expression_num
    (17) expression_num -> . MUL_OP expression_num AN expression_num
    (18) expression_num -> . MOD_OP expression_num AN expression_num
    (19) expression_num -> . MAX_OP expression_num AN expression_num
    (20) expression_num -> . MIN_OP expression_num AN expression_num
    (21) expression_num -> . ADD_OP expression_num AN expression_num new_line
    (22) expression_num -> . MUL_OP expression_num AN expression_num new_line
    (23) expression_num -> . MOD_OP expression_num AN expression_num new_line
    (24) expression_num -> . MAX_OP expression_num AN expression_num new_line
    (25) expression_num -> . MIN_OP expression_num AN expression_num new_line
    (26) expression_num -> . INC_OP expression_num
    (27) expression_num -> . INC_OP expression_num new_line
    (28) expression_num -> . NUMBER
    (29) expression_num -> . IDENTIFIER
    (30) expression_num -> . NUMBER new_line
    (31) expression_num -> . IDENTIFIER new_line

    ADD_OP          shift and go to state 11
    MUL_OP          shift and go to state 18
    MOD_OP          shift and go to state 20
    MAX_OP          shift and go to state 16
    MIN_OP          shift and go to state 9
    INC_OP          shift and go to state 4
    NUMBER          shift and go to state 3
    IDENTIFIER      shift and go to state 30

    expression_num                 shift and go to state 35

state 10

    (1) programme -> statement .
    (2) programme -> statement . programme
    (10) comment -> statement . SL_COMMENT new_line
    (11) comment -> statement . ML_COMMENT new_line
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . assignation
    (4) statement -> . declaration
    (5) statement -> . expression
    (6) statement -> . structure
    (7) statement -> . comment
    (8) statement -> . BREAK
    (9) statement -> . BREAK new_line
    (42) assignation -> . IDENTIFIER ASSIGNEMENT_SIMPLE expression
    (43) assignation -> . IDENTIFIER ASSIGNEMENT_SIMPLE expression new_line
    (40) declaration -> . DECLARATION IDENTIFIER ASSIGNEMENT_DECL expression
    (41) declaration -> . DECLARATION IDENTIFIER ASSIGNEMENT_DECL expression new_line
    (14) expression -> . expression_num
    (15) expression -> . expression_bool
    (46) structure -> . WHILE expression_bool programme END_LOOP
    (47) structure -> . WHILE expression_bool programme END_LOOP new_line
    (48) structure -> . FOR IDENTIFIER UNTIL expression_num programme END_LOOP
    (49) structure -> . FOR IDENTIFIER UNTIL expression_num programme END_LOOP new_line
    (50) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_END
    (51) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_END new_line
    (52) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END
    (53) structure -> . expression_bool IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END new_line
    (10) comment -> . statement SL_COMMENT new_line
    (11) comment -> . statement ML_COMMENT new_line
    (12) comment -> . SL_COMMENT new_line
    (13) comment -> . ML_COMMENT new_line
    (16) expression_num -> . ADD_OP expression_num AN expression_num
    (17) expression_num -> . MUL_OP expression_num AN expression_num
    (18) expression_num -> . MOD_OP expression_num AN expression_num
    (19) expression_num -> . MAX_OP expression_num AN expression_num
    (20) expression_num -> . MIN_OP expression_num AN expression_num
    (21) expression_num -> . ADD_OP expression_num AN expression_num new_line
    (22) expression_num -> . MUL_OP expression_num AN expression_num new_line
    (23) expression_num -> . MOD_OP expression_num AN expression_num new_line
    (24) expression_num -> . MAX_OP expression_num AN expression_num new_line
    (25) expression_num -> . MIN_OP expression_num AN expression_num new_line
    (26) expression_num -> . INC_OP expression_num
    (27) expression_num -> . INC_OP expression_num new_line
    (28) expression_num -> . NUMBER
    (29) expression_num -> . IDENTIFIER
    (30) expression_num -> . NUMBER new_line
    (31) expression_num -> . IDENTIFIER new_line
    (32) expression_bool -> . BOOL
    (33) expression_bool -> . BOOL new_line
    (34) expression_bool -> . BOOL_OP expression_bool AN expression_bool
    (35) expression_bool -> . BOOL_OP expression_bool AN expression_bool new_line
    (36) expression_bool -> . NOT expression_bool
    (37) expression_bool -> . NOT expression_bool new_line
    (38) expression_bool -> . COMP expression_num AN expression_num
    (39) expression_bool -> . COMP expression_num AN expression_num new_line

    $end            reduce using rule 1 (programme -> statement .)
    END_LOOP        reduce using rule 1 (programme -> statement .)
    IF_END          reduce using rule 1 (programme -> statement .)
    IF_FALSE        reduce using rule 1 (programme -> statement .)
    SL_COMMENT      shift and go to state 37
    ML_COMMENT      shift and go to state 36
    BREAK           shift and go to state 22
    IDENTIFIER      shift and go to state 13
    DECLARATION     shift and go to state 23
    WHILE           shift and go to state 5
    FOR             shift and go to state 15
    ADD_OP          shift and go to state 11
    MUL_OP          shift and go to state 18
    MOD_OP          shift and go to state 20
    MAX_OP          shift and go to state 16
    MIN_OP          shift and go to state 9
    INC_OP          shift and go to state 4
    NUMBER          shift and go to state 3
    BOOL            shift and go to state 12
    BOOL_OP         shift and go to state 8
    NOT             shift and go to state 24
    COMP            shift and go to state 26

    comment                        shift and go to state 1
    assignation                    shift and go to state 19
    expression_bool                shift and go to state 14
    statement                      shift and go to state 10
    declaration                    shift and go to state 2
    expression_num                 shift and go to state 7
    expression                     shift and go to state 25
    structure                      shift and go to state 17
    programme                      shift and go to state 38

state 11

    (16) expression_num -> ADD_OP . expression_num AN expression_num
    (21) expression_num -> ADD_OP . expression_num AN expression_num new_line
    (16) expression_num -> . ADD_OP expression_num AN expression_num
    (17) expression_num -> . MUL_OP expression_num AN expression_num
    (18) expression_num -> . MOD_OP expression_num AN expression_num
    (19) expression_num -> . MAX_OP expression_num AN expression_num
    (20) expression_num -> . MIN_OP expression_num AN expression_num
    (21) expression_num -> . ADD_OP expression_num AN expression_num new_line
    (22) expression_num -> . MUL_OP expression_num AN expression_num new_line
    (23) expression_num -> . MOD_OP expression_num AN expression_num new_line
    (24) expression_num -> . MAX_OP expression_num AN expression_num new_line
    (25) expression_num -> . MIN_OP expression_num AN expression_num new_line
    (26) expression_num -> . INC_OP expression_num
    (27) expression_num -> . INC_OP expression_num new_line
    (28) expression_num -> . NUMBER
    (29) expression_num -> . IDENTIFIER
    (30) expression_num -> . NUMBER new_line
    (31) expression_num -> . IDENTIFIER new_line

    ADD_OP          shift and go to state 11
    MUL_OP          shift and go to state 18
    MOD_OP          shift and go to state 20
    MAX_OP          shift and go to state 16
    MIN_OP          shift and go to state 9
    INC_OP          shift and go to state 4
    NUMBER          shift and go to state 3
    IDENTIFIER      shift and go to state 30

    expression_num                 shift and go to state 39

state 12

    (32) expression_bool -> BOOL .
    (33) expression_bool -> BOOL . new_line
    (44) new_line -> . NL
    (45) new_line -> . NL NL

  ! shift/reduce conflict for NL resolved as shift
    SL_COMMENT      reduce using rule 32 (expression_bool -> BOOL .)
    ML_COMMENT      reduce using rule 32 (expression_bool -> BOOL .)
    BREAK           reduce using rule 32 (expression_bool -> BOOL .)
    IDENTIFIER      reduce using rule 32 (expression_bool -> BOOL .)
    DECLARATION     reduce using rule 32 (expression_bool -> BOOL .)
    WHILE           reduce using rule 32 (expression_bool -> BOOL .)
    FOR             reduce using rule 32 (expression_bool -> BOOL .)
    ADD_OP          reduce using rule 32 (expression_bool -> BOOL .)
    MUL_OP          reduce using rule 32 (expression_bool -> BOOL .)
    MOD_OP          reduce using rule 32 (expression_bool -> BOOL .)
    MAX_OP          reduce using rule 32 (expression_bool -> BOOL .)
    MIN_OP          reduce using rule 32 (expression_bool -> BOOL .)
    INC_OP          reduce using rule 32 (expression_bool -> BOOL .)
    NUMBER          reduce using rule 32 (expression_bool -> BOOL .)
    BOOL            reduce using rule 32 (expression_bool -> BOOL .)
    BOOL_OP         reduce using rule 32 (expression_bool -> BOOL .)
    NOT             reduce using rule 32 (expression_bool -> BOOL .)
    COMP            reduce using rule 32 (expression_bool -> BOOL .)
    $end            reduce using rule 32 (expression_bool -> BOOL .)
    END_LOOP        reduce using rule 32 (expression_bool -> BOOL .)
    IF_END          reduce using rule 32 (expression_bool -> BOOL .)
    IF_FALSE        reduce using rule 32 (expression_bool -> BOOL .)
    IF              reduce using rule 32 (expression_bool -> BOOL .)
    AN              reduce using rule 32 (expression_bool -> BOOL .)
    NL              shift and go to state 29

  ! NL              [ reduce using rule 32 (expression_bool -> BOOL .) ]

    new_line                       shift and go to state 40

state 13

    (42) assignation -> IDENTIFIER . ASSIGNEMENT_SIMPLE expression
    (43) assignation -> IDENTIFIER . ASSIGNEMENT_SIMPLE expression new_line
    (29) expression_num -> IDENTIFIER .
    (31) expression_num -> IDENTIFIER . new_line
    (44) new_line -> . NL
    (45) new_line -> . NL NL

    ASSIGNEMENT_SIMPLE shift and go to state 42
    SL_COMMENT      reduce using rule 29 (expression_num -> IDENTIFIER .)
    ML_COMMENT      reduce using rule 29 (expression_num -> IDENTIFIER .)
    BREAK           reduce using rule 29 (expression_num -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 29 (expression_num -> IDENTIFIER .)
    DECLARATION     reduce using rule 29 (expression_num -> IDENTIFIER .)
    WHILE           reduce using rule 29 (expression_num -> IDENTIFIER .)
    FOR             reduce using rule 29 (expression_num -> IDENTIFIER .)
    ADD_OP          reduce using rule 29 (expression_num -> IDENTIFIER .)
    MUL_OP          reduce using rule 29 (expression_num -> IDENTIFIER .)
    MOD_OP          reduce using rule 29 (expression_num -> IDENTIFIER .)
    MAX_OP          reduce using rule 29 (expression_num -> IDENTIFIER .)
    MIN_OP          reduce using rule 29 (expression_num -> IDENTIFIER .)
    INC_OP          reduce using rule 29 (expression_num -> IDENTIFIER .)
    NUMBER          reduce using rule 29 (expression_num -> IDENTIFIER .)
    BOOL            reduce using rule 29 (expression_num -> IDENTIFIER .)
    BOOL_OP         reduce using rule 29 (expression_num -> IDENTIFIER .)
    NOT             reduce using rule 29 (expression_num -> IDENTIFIER .)
    COMP            reduce using rule 29 (expression_num -> IDENTIFIER .)
    IF_END          reduce using rule 29 (expression_num -> IDENTIFIER .)
    $end            reduce using rule 29 (expression_num -> IDENTIFIER .)
    END_LOOP        reduce using rule 29 (expression_num -> IDENTIFIER .)
    IF_FALSE        reduce using rule 29 (expression_num -> IDENTIFIER .)
    NL              shift and go to state 29

    new_line                       shift and go to state 41

state 14

    (15) expression -> expression_bool .
    (50) structure -> expression_bool . IF new_line IF_TRUE new_line programme IF_END
    (51) structure -> expression_bool . IF new_line IF_TRUE new_line programme IF_END new_line
    (52) structure -> expression_bool . IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END
    (53) structure -> expression_bool . IF new_line IF_TRUE new_line programme IF_FALSE new_line programme IF_END new_line

    SL_COMMENT      reduce using rule 15 (expression -> expression_bool .)
    ML_COMMENT      reduce using rule 15 (expression -> expression_bool .)
    BREAK           reduce using rule 15 (expression -> expression_bool .)
    IDENTIFIER      reduce using rule 15 (expression -> expression_bool .)
    DECLARATION     reduce using rule 15 (expression -> expression_bool .)
    WHILE           reduce using rule 15 (expression -> expression_bool .)
    FOR             reduce using rule 15 (expression -> expression_bool .)
    ADD_OP          reduce using rule 15 (expression -> expression_bool .)
    MUL_OP          reduce using rule 15 (expression -> expression_bool .)
    MOD_OP          reduce using rule 15 (expression -> expression_bool .)
    MAX_OP          reduce using rule 15 (expression -> expression_bool .)
    MIN_OP          reduce using rule 15 (expression -> expression_bool .)
    INC_OP          reduce using rule 15 (expression -> expression_bool .)
    NUMBER          reduce using rule 15 (expression -> expression_bool .)
    BOOL            reduce using rule 15 (expression -> expression_bool .)
    BOOL_OP         reduce using rule 15 (expression -> expression_bool .)
    NOT             reduce using rule 15 (expression -> expression_bool .)
    COMP            reduce using rule 15 (expression -> expression_bool .)
    $end            reduce using rule 15 (expression -> expression_bool .)
    END_LOOP        reduce using rule 15 (expression -> expression_bool .)
    IF_END          reduce using rule 15 (expression -> expression_bool .)
    IF_FALSE        reduce using rule 15 (expression -> expression_bool .)
    IF              shift and go to state 43


state 15

    (48) structure -> FOR . IDENTIFIER UNTIL expression_num programme END_LOOP
    (49) structure -> FOR . IDENTIFIER UNTIL expression_num programme END_LOOP new_line

    IDENTIFIER      shift and go to state 44


state 16

    (19) expression_num -> MAX_OP . expression_num AN expression_num
    (24) expression_num -> MAX_OP . expression_num AN expression_num new_line
    (16) expression_num -> . ADD_OP expression_num AN expression_num
    (17) expression_num -> . MUL_OP expression_num AN expression_num
    (18) expression_num -> . MOD_OP expression_num AN expression_num
    (19) expression_num -> . MAX_OP expression_num AN expression_num
    (20) expression_num -> . MIN_OP expression_num AN expression_num
    (21) expression_num -> . ADD_OP expression_num AN expression_num new_line
    (22) expression_num -> . MUL_OP expression_num AN expression_num new_line
    (23) expression_num -> . MOD_OP expression_num AN expression_num new_line
    (24) expression_num -> . MAX_OP expression_num AN expression_num new_line
    (25) expression_num -> . MIN_OP expression_num AN expression_num new_line
    (26) expression_num -> . INC_OP expression_num
    (27) expression_num -> . INC_OP expression_num new_line
    (28) expression_num -> . NUMBER
    (29) expression_num -> . IDENTIFIER
    (30) expression_num -> . NUMBER new_line
    (31) expression_num -> . IDENTIFIER new_line

    ADD_OP          shift and go to state 11
    MUL_OP          shift and go to state 18
    MOD_OP          shift and go to state 20
    MAX_OP          shift and go to state 16
    MIN_OP          shift and go to state 9
    INC_OP          shift and go to state 4
    NUMBER          shift and go to state 3
    IDENTIFIER      shift and go to state 30
